syntax = "proto3";

option go_package = "/protos";

package azure;

message BlobInfo {
  int64 range_start = 1;
  int64 range_end = 2;
  string container_name = 3;
  string blob_name = 4;
}
